maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:43: error: reassignment to val
    if (indics(i)+1 < i) i = indics(i)+1;
                           ^